examples/test/testpolicy9909.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9909
  namespace: namespace125
spec:
  podSelector:
    matchLabels:
      key2: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value18
          key49: value8
          key39: value20
      podSelector:
        matchLabels:
          key16: value37
          key41: value46
